[package]
name = "tanjun-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["chrono"] }
